tests/typing/errors/bitv_size/zero_bitv.smt2
(set-logic BV)
(declare-fun b () (_ BitVec 0))
(check-sat)
